--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,18 @@
             <version>1.7</version>
             <scope>provided</scope>
         </dependency>
+         <dependency>
+             <groupId>me.matthewe</groupId>
+             <artifactId>AtherialLibPlugin</artifactId>
+             <version>1.0</version>
+             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <scope>provided</scope>
+            <groupId>me.matthewedevelopment</groupId>
+            <artifactId>atheriallib</artifactId>
+            <version>0.36</version>
+        </dependency>
         <dependency>
             <groupId>com.github.cryptomorin</groupId>
             <artifactId>XSeries</artifactId>
